--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,22 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; 
+  font-family: 'Courier New', Courier, monospace;
+  background-color: #0093E9;
+  background-image: linear-gradient(100deg, #0093E9 0%, #80D0C7 100%);
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  cursor: pointer;
+}
+
+.Particles {
+  position: fixed;
 }
